# verxio-web

./: .env.example  .env.verxio.example  .gitignore  2026-06-01_verxio_platform_agent_structure.md  DEPLOY.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  docker-compose.verxio.yml  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: rebrand-to-verxio.mjs
src/: app.tsx  hermes.ts  main.tsx  styles.css  vite-env.d.ts
src/app/: desktop-controller.tsx
src/components/: desktop-install-overlay.tsx  desktop-onboarding-overlay.tsx  model-picker.tsx  verxio-auth-gate.tsx
src/i18n/: en.ts  ja.ts  types.ts  zh-hant.ts  zh.ts
src/lib/: chat-runtime.ts  dashboard.ts  icons.ts  model-status-label.ts  provider-setup-errors.test.ts  provider-setup-errors.ts  verxio-api.ts  web-local-completions.ts  web-local-fs.ts  yolo-session.ts
src/platform/: install-web-bridge.ts
src/store/: panes.ts  session.ts
src/themes/: use-skin-command.ts
src/types/: hermes.ts
verxio-api/: Dockerfile  README.md  brand.md  pyproject.toml
verxio-api/app/: __init__.py  auth.py  composio_catalog.py  control_plane.py  db.py  emailer.py  main.py  models.py  runtime.py  runtime_manager.py  store.py
verxio-api/migrations/: 001_control_plane.sql  002_auth_codes.sql
verxio-api/static/: app.js  index.html  styles.css
verxio-api/tests/: test_api.py
verxio-web/: .env.example  .gitignore  .prettierignore  Dockerfile  LICENSE  README.md  nginx.conf  package-lock.json  tsconfig.json  vite.config.ts
verxio-web/.githooks/: pre-commit
(+119 files in other folders)
